--- a/main.html
+++ b/main.html
@@ -3,14 +3,41 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Example Page</title>
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+    <h1>Welcome to the Student's Page</h1>
+    
+    <!-- Feedback Form -->
+    <form action="/submit-feedback" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
+        <br><br>
 
+        <label for="portfolio">Portfolio:</label>
+        <input type="url" id="portfolio" name="portfolio" required>
+        <br><br>
+
+        <label for="favColor">Favorite Color:</label>
+        <input type="color" id="favColor" name="favColor" required>
+        <br><br>
+
+        <label for="likeness">Likeness (1-100):</label>
+        <input type="range" id="likeness" name="likeness" min="1" max="100" required>
+        <br><br>
+
+        <button type="submit">Submit</button>
+    </form>
+
+    <!-- Placeholder for more content -->
+    <p>This is a sample paragraph to add more content to the student's page. You can modify this to meet your project requirements.</p>
+
+    <!-- Script linked for functionality -->
+    <script type="text/javascript" src="./script.js"></script>
 </body>
 
 </html>
