--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+	<h1>Feedback Form</h1>
     <form action="/submit-feedback" method="POST">
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" minlength="3" maxlength="50" required>
